--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -2,11 +2,18 @@
     margin: 0;
     margin-right: 15px;
     padding: 0;
-    color: #000;
-    text-decoration: none;
+    border: none;    
+    background-image: url(../../../images/like-icon.svg);
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    cursor: pointer;
+    width: 22px;
+    height: 19px;
 }
 
 .card__like:hover {
-    opacity: .6;
+    opacity: .5;
 }
 
