--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -8,3 +8,15 @@
     row-gap: 20px;
     justify-items: center;
 }
+
+@media (max-width: 900px) {
+    .elements {
+        grid-template-columns: repeat(auto-fill, 1fr); 
+    }
+}
+
+@media (max-width: 700px) {
+    .elements {
+        grid-template-columns: repeat(auto-fill, minmax(282px, 1fr)); 
+    }
+}
