--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -8,6 +8,7 @@
 
     display: flex;
     justify-content: center;
+    align-items: center;
     visibility: hidden;
 
 }
