--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,12 +1,15 @@
 .profile__add-button {
+    align-self: center;
     width: 150px;
     height: 50px;
+    background-color: transparent;
+    background-image: url(../../../images/plus-icon.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
     border: 2px solid white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-
+    cursor: pointer;
 }
 
 .profile__add-button:hover {
