--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,9 +1,18 @@
 .profile__edit-button {
-    display: flex;
-    align-items: center;
     align-self: baseline;
+    margin: 0;
     margin-top: 14px;
     margin-left: 18px;
+    padding: 0;
+    background-image: url(../../../images/Edit_Button.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: transparent;
+    border: none;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
 }
 
 .profile__edit-button:hover {
@@ -12,6 +21,8 @@
 
 @media (max-width: 700px) {
     .profile__edit-button {
+        width: 18px;
+        height: 18px;
         margin-top: 5px;
         margin-left: 10px;
     }
