--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,4 +1,5 @@
 .profile__description {
+    max-width: 336px;
     margin: 0;
     margin-top: 16px;
     padding: 0;
@@ -13,6 +14,7 @@
 
 @media (max-width: 700px) {
     .profile__description {
+        max-width: 282px;
         font-size: 14px;
         line-height: 17px; 
     }
