--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,5 @@
 .profile__name {
+    max-width: 294px;
     margin: 0;
     padding: 0;
     font-style: normal;
@@ -12,7 +13,7 @@
 
 @media (max-width: 700px) {
     .profile__name {
-      
+        max-width: 189px;
         font-size: 27px;
         line-height: 33px;
     }
