ready for review1

--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,13 +1,13 @@
 .card__image {
+    object-fit: cover;
     border-radius: 10px 10px 0 0;
     width: 100%;
-    max-width: 282px;
+    height: 282px;
+
 }
 
 @media (max-width: 900px) {
     .card__image {
         max-width: 100%;
-        object-fit: cover;
-        max-height: 282px;
     }
 }
