--- a/blocks/image-popup/image-popup.css
+++ b/blocks/image-popup/image-popup.css
@@ -8,7 +8,8 @@
     }
 }
 
-.popup {
+
+.image-popup {
     z-index: 5;
     position: fixed;
     top: 0;
@@ -20,6 +21,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /*visibility: hidden;*/
-
 }
