--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,12 @@
 @import url(../blocks/profile-form/__input/profile-form__input.css);
 @import url(../blocks/profile-form/__submit-button/profile-form__submit-button.css);
 
+@import url(../blocks/image-popup/image-popup.css);
+@import url(../blocks/image-popup/__close-button/image-popup__close-button.css);
+@import url(../blocks/image-popup/__pic/image-popup__pic.css);
+@import url(../blocks/image-popup/__caption/image-popup__caption.css);
+@import url(../blocks/image-popup/__window/image-popup__window.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/logo.css);
 
@@ -29,6 +35,7 @@
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/card/card.css);
+@import url(../blocks/card/__delete/card__delete.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__caption/card__caption.css);
 @import url(../blocks/card/__title/card__title.css);
