--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,6 +6,9 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, .5);
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity .3s ease-out;
 
     display: flex;
     justify-content: center;
