--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,12 @@
 @import url(../blocks/popup-form/__input/popup-form__input.css);
 @import url(../blocks/popup-form/__submit-button/popup-form__submit-button.css);
 
+@import url(../blocks/popup-form/__input-error/popup-form__input-error.css);
+@import url(../blocks/popup-form/__input-error/_active/popup-form__input-error_active.css);
+@import url(../blocks/popup-form/__input/_type/_error/popup-form__input_type_error.css);
+@import url(../blocks/popup-form/__submit-button/_disabled/popup-form__submit-button_disabled.css);
+@import url(../blocks/popup-form/__container/popup-form__container.css);
+
 @import url(../blocks/image-popup/image-popup.css);
 @import url(../blocks/image-popup/__pic/image-popup__pic.css);
 @import url(../blocks/image-popup/__caption/image-popup__caption.css);
