--- a/blocks/avatar/avatar.css
+++ b/blocks/avatar/avatar.css
@@ -1,7 +1,8 @@
 .avatar {
+    object-fit: cover;
     width: 120px;
     height: 120px;
     border: none;
     border-radius: 100%;
-
+    z-index: 1;
 }
