--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,10 @@
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__container/profile__container.css);
+
+@import url(../blocks/avatar/__container/avatar__container.css);
 @import url(../blocks/avatar/avatar.css);
+@import url(../blocks/avatar/__edit-button/avatar__edit-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__info-block/profile__info-block.css);
 @import url(../blocks/profile/__name/profile__name.css);
@@ -44,11 +47,14 @@
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__delete/card__delete.css);
+@import url(../blocks/card/__delete/_inactive/card__delete_inactive.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__caption/card__caption.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like/card__like.css);
 @import url(../blocks/card/__like/_active/card__like_active.css);
+@import url(../blocks/card/__like-box/card__like-box.css);
+@import url(../blocks/card/__like-counter/card__like-counter.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
